data pre-processing completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -935,6 +935,155 @@ Stakeholder identification is a pivotal aspect of ensuring the fair and inclusiv
 
 This inclusive process contributes to the development of a system that is not only technically sound but also ethically grounded and considerate of various societal perspectives. The intentional involvement of diverse stakeholders ensures that the resulting technology aligns with ethical standards and is more likely to meet the expectations of the communities it serves, fostering a sense of trust and accountability in the development process.
 
+\section{Data Collection: Integration with Stakeholder Considerations}
+\label{section:data-collection}
+
+In the process of data collection, the integration of insights from stakeholders is crucial, particularly for the identification of protected attributes. Stakeholders bring valuable perspectives on societal norms, ethical considerations, and potential biases that may not be apparent solely from the dataset. Their input aids in defining and recognizing protected attributes, contributing to a more nuanced understanding of fairness in the context of the application.
+
+Stakeholder involvement ensures that the identification of protected attributes is not solely based on technical or algorithmic considerations but is informed by the broader societal context. This inclusive approach helps uncover potential biases and ethical implications that might be overlooked in the data, leading to a more robust and ethically grounded system. By actively incorporating stakeholder insights in the identification of protected attributes, the fair-by-design methodology enhances the fairness and accountability of the system, aligning it more closely with the values and expectations of the diverse communities it serves.
+
+\subsection{Importance of Stakeholder Integration}
+
+\subsubsection{Cultural Sensitivity}
+
+Stakeholders, representing diverse backgrounds, contribute significantly to a nuanced understanding of cultural norms and sensitivities within the fair-by-design approach. This diversity is crucial in recognizing attributes that may be culturally significant and warrant protection. For instance, certain cultural or religious practices may involve sensitive information that should be identified as a protected attribute to ensure respectful and unbiased treatment.
+
+By actively involving stakeholders who bring a range of cultural perspectives, the objective-setting process can identify and address potential biases associated with cultural attributes, fostering a system that respects and reflects the rich diversity of its user base. This approach not only enhances fairness but also promotes cultural sensitivity and inclusivity in the design and implementation of the system.
+
+Through the fair-by-design methodology, cultural considerations become integral to the ethical framework, ensuring that the system acknowledges and respects the cultural context of its users. This not only aligns the technology with ethical standards but also contributes to a more inclusive and culturally aware development process, ultimately leading to a system that is more equitable and considerate of the diverse cultural backgrounds of its users.
+
+\subsubsection{Contextual Relevance}
+
+Stakeholders play a crucial role in providing contextual insights that may not be evident in the dataset alone within the fair-by-design approach. Their considerations can guide the identification of attributes relevant to the specific application and its ethical implications. For instance, in an educational context, stakeholders might highlight attributes related to socio-economic status or learning styles that could impact fairness considerations in student evaluations.
+
+By actively involving stakeholders, the objective-setting process gains valuable perspectives that enrich the ethical framework of the system. This collaborative approach ensures that the identified objectives not only align with technical requirements but also address real-world considerations, promoting a more holistic and socially responsible system.
+
+Through the fair-by-design methodology, stakeholders become partners in shaping a system that is not only technically robust but also considerate of the diverse and dynamic factors influencing its ethical considerations. This inclusive collaboration helps bridge the gap between technical requirements and real-world implications, fostering a technology landscape that is not only advanced but also socially conscious and responsive to the needs and concerns of the communities it serves.
+
+\subsubsection{Uncovering Implicit Biases}
+
+
+Stakeholders play a crucial role in uncovering implicit biases that may not be explicitly represented in the dataset within the fair-by-design approach. By incorporating their perspectives, the identification of protected attributes becomes more comprehensive and reflective of potential sources of bias. This is particularly important in domains where historical biases or societal prejudices might influence decision-making processes.
+
+Stakeholders can provide valuable input to address and mitigate these implicit biases, contributing to the development of a more equitable and unbiased system. Their involvement ensures a thorough examination of potential biases, fostering transparency and fairness in the system's design and objectives.
+
+Through the fair-by-design methodology, stakeholders act as critical agents in the identification and mitigation of biases, leading to a more robust and ethically grounded system. This collaborative approach not only enhances the fairness of the technology but also promotes a culture of accountability and transparency in addressing biases that may exist in the underlying data or decision-making processes.
+
+\subsection{Implementation Steps}
+
+\subsubsection{Stakeholder Workshops}
+
+\emph{Objective:} Integrate stakeholder considerations into the identification of protected attributes.
+
+\emph{Implementation:}
+
+\begin{itemize}
+
+    \item Conduct stakeholder workshops specifically focused on discussing and identifying potential protected attributes.
+
+    \item Encourage open discussions to uncover implicit biases or attributes that may have societal implications.
+
+    \item Facilitate collaboration between data scientists and stakeholders to ensure a shared understanding of fairness goals.
+
+\end{itemize}
+
+\subsubsection{Documentation of Stakeholder Input}
+
+\emph{Objective:} Document stakeholder input on protected attributes for transparency.
+
+\emph{Implementation:}
+
+\begin{itemize}
+
+    \item Record the insights shared by stakeholders regarding attributes they perceive as sensitive or requiring protection.
+
+    \item Incorporate stakeholder considerations into the broader documentation of the data collection process.
+
+    \item Provide clear documentation of the integration process to maintain transparency and facilitate reproducibility.
+
+\end{itemize}
+
+\subsection{Assessing Fairness}
+
+In evaluating the fairness of a dataset over the protected attributes identified with stakeholders, various fairness metrics can be employed to provide a nuanced understanding of potential biases. While the disparate impact metric is commonly used, it is just one among several fairness metrics available.
+
+These fairness metrics serve to quantify and assess disparities in outcomes among different groups, shedding light on how the dataset represents protected attributes. By considering a range of fairness metrics, such as equalized odds, predictive parity, or disparate mistreatment, a more comprehensive analysis of potential biases and fairness issues within the dataset can be achieved.
+
+This broader approach to fairness evaluation aligns with the fair-by-design methodology, emphasizing a thorough examination of the dataset's composition and its implications for different groups. The selection of specific fairness metrics can be tailored to the context of the application and the concerns raised by stakeholders, ensuring that the evaluation process is not only robust but also aligns with the diverse perspectives and considerations identified in the collaborative objective-setting process.
+
+\section{Data Pre-processing}
+\label{section:pre-proc}
+
+Following the completion of data collection and the incorporation of stakeholder considerations, the subsequent pivotal stage in the workflow is data pre-processing. This critical phase is dedicated to meticulously preparing and cleansing the dataset with the overarching goal of addressing biases, rectifying imbalances, and ensuring a fair and equitable foundation for the ensuing stages of the fair-by-design workflow. The emphasis during data pre-processing is on refining the dataset to foster a more equitable and unbiased representation, thus laying the groundwork for robust and ethical data-driven decision-making processes.
+
+\subsection{Key Considerations}
+
+\begin{enumerate}
+
+    \item \emph{Data cleaning:} 
+
+    This process involves identifying and rectifying errors, inconsistencies, and inaccuracies in the raw dataset to ensure its reliability and quality. Common tasks in data cleaning include handling missing values, correcting data format issues, removing duplicates, and addressing outliers. The goal is to create a clean, standardized dataset that forms a solid foundation for subsequent analysis and model development. Rigorous data cleaning is essential for mitigating the risk of biased or inaccurate model outcomes, as machine learning models heavily depend on the quality of the input data. This meticulous attention to data quality sets the stage for effective feature engineering, model training, and, ultimately, the generation of reliable and fair predictions.
+
+    \item \emph{Handling Protected Attributes:} 
+    
+    Within the Fair-by-Design workflow, a meticulous transformation process is applied to protected attributes, assumed to be categorical in nature. This transformative step is pivotal for ensuring fairness in subsequent stages of the machine learning pipeline, aiming to mitigate potential biases associated with these attributes and foster equitable treatment within the model.
+
+    The transformation process for categorical protected attributes involves the identification of the most frequent value and the subsequent application of a binary encoding scheme. This nuanced procedure plays a crucial role in aligning the dataset with the fairness objectives of the Fair-by-Design workflow.
+
+    Let $P$ be the set of protected attributes, and $p_i$ represent a specific protected attribute within $P$. The most frequent value, denoted as $v_{\text{freq}}$, is determined for each categorical protected attribute $p_i$ in the dataset through the following formalism:
+
+    \[
+    v_{\text{freq}} = \text{argmax}_v \left( \text{count}(p_i = v) \right)
+    \]
+    
+    This calculation ensures a comprehensive understanding of the prevalent categories within these attributes.
+
+    The binary representation preserves the essential information about protected attributes, providing a condensed yet informative encoding that reflects the privilege or lack thereof concerning specific attributes.
+
+    During the training phase, the model learns to distinguish instances based on privilege or lack thereof concerning specific attributes, as represented by the binary encoding. This facilitates effective model incorporation and decision-making during training and prediction phases.
+
+    This nuanced encoding strategy serves as the foundation for unbiased and fair treatment of instances within the model. By transforming categorical protected attributes into a binary representation, the Fair-by-Design workflow ensures that subsequent machine learning models can effectively incorporate and act upon this information during training and prediction phases, contributing significantly to the development of a more equitable and ethically sound machine learning model.
+
+    \item \emph{Handling Output Variable:} 
+    
+    The handling of the output variable in the Fair-by-Design workflow is a nuanced process that adapts to the nature of the variable, whether categorical or continuous. This tailored treatment is essential for aligning the prediction task with the fairness objectives of the workflow, ensuring that the model's predictions are not only accurate but also ethically sound.
+
+
+    In cases where the output variable is categorical, the workflow initiates by determining the most frequent value within this category. Let $Y$ represent the output variable, and $y_i$ be a specific outcome within $Y$. The most frequent value, denoted as $y_{\text{freq}}$, is determined through the following formalism:
+
+    \[
+    y_{\text{freq}} = \text{argmax}_y \left( \text{count}(Y = y) \right)
+    \]
+
+    This strategic calculation provides insights into the prevailing outcome within the dataset. Subsequently, instances where the output variable matches $y_{\text{freq}}$ are replaced with the binary representation 1, while all other instances take on the binary representation 0. The binary encoding function is defined as follows:
+
+    \[
+    \text{Binary Encoding}(y_i) = \begin{cases} 
+    1 & \text{if } y_i = y_{\text{freq}} \\ 
+    0 & \text{otherwise}
+    \end{cases}
+    \]
+
+    This transformation effectively redefines the prediction task, shifting the focus to discerning whether a given sample belongs to the most frequent outcome. The binary encoding approach not only simplifies the representation of categorical outcomes but also enables the model to make predictions in a manner that aligns with fairness considerations.
+
+
+    Conversely, when the output variable is continuous, the workflow employs a distinct strategy. Let $Z$ represent the continuous output variable, and $z_i$ be a specific value within $Z$. Values of the continuous variable that surpass the mean are replaced with 1, while those falling below the mean assume the binary representation 0. This adjustment transforms the prediction task into establishing whether a sample's continuous output is above the mean. The binary encoding function for continuous variables is defined as:
+
+    \[
+    \text{Binary Encoding}(z_i) = \begin{cases} 
+    1 & \text{if } z_i > \text{mean}(Z) \\ 
+    0 & \text{otherwise}
+    \end{cases}
+    \]
+
+    This approach ensures that the model is not only attentive to the central tendency of the continuous variable but also considers the distribution of values concerning the mean.
+
+    This tailored and meticulous treatment of the output variable underscores the commitment of the Fair-by-Design workflow to equitable and ethical machine learning practices. The workflow not only adapts to the inherent characteristics of the data but also ensures that the subsequent model operates with a heightened awareness of fairness considerations, contributing to the development of a more responsible and unbiased machine learning model.
+
+\end{enumerate}
+
+This nuanced pre-processing step sets the groundwork for a fair and unbiased learning prediction, aligning the dataset with the ethical considerations embedded in the Fair-by-Design workflow.
+
 
 %----------------------------------------------------------------------------------------
 \chapter{Validation} % possible chapter for Projects
